--- a/rails_hello_world/index.html
+++ b/rails_hello_world/index.html
@@ -8,7 +8,7 @@
     </style>
     <link rel="stylesheet" href="../css/reveal.css"/>
 
-    <link rel="stylesheet" href="../css/theme/white.css" id="theme"/>
+    <link rel="stylesheet" href="../css/theme/blood.css" id="theme"/>
 
     <link rel="stylesheet" href="../css/font-awesome.min.css"/>
     <link rel="stylesheet" href="../css/highlight/styles/zenburn.css"/>
