rails mvc basics

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 <li><a href="http://krazedkrish.com/ruby-on-rails-tutorial/introduction/">Introduction</a>
                 <li><a href="http://krazedkrish.com/ruby-on-rails-tutorial/beginning_ruby/">Beginning Ruby</a>
                 <li><a href="http://krazedkrish.com/ruby-on-rails-tutorial/rails_hello_world/">Rails: Hello World</a>
+                <li><a href="http://krazedkrish.com/ruby-on-rails-tutorial/mvc/">Rails MVC Basics</a>
                 </li>
               </ul>
             </div>
